--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,15 @@
 image: golang:latest-alpine
 
 stages:
+  - build
   - test
+
+build:
+  stage: build
+  script:
+    - make build
 
 coverage:
   stage: test
   script:
-    - 
+    - make test
