--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,14 @@ stages:
 
 build:
   stage: build
+  before_script:
+    - apk add build-base
   script:
     - make build
 
 coverage:
   stage: test
+  before_script:
+    - apk add build-base
   script:
     - make test
